[gd_scene load_steps=9 format=3 uid="uid://b7fu4bn5lsbqf"]

[ext_resource type="Texture2D" uid="uid://cxjou7jwge4ia" path="res://assets/cards/blank_card.png" id="1_c1yy5"]
[ext_resource type="Script" path="res://scripts/v_box_container.gd" id="2_teeox"]
[ext_resource type="Texture2D" uid="uid://cw2eh8geyo0y1" path="res://assets/Buttons Pixel Animation Pack/back/72px/back02.png" id="3_thi4o"]
[ext_resource type="Texture2D" uid="uid://bh3iulmeotfoq" path="res://assets/Buttons Pixel Animation Pack/back/72px/back03.png" id="4_33aox"]
[ext_resource type="Texture2D" uid="uid://dvlmojfhwe45s" path="res://assets/Buttons Pixel Animation Pack/back/72px/back04.png" id="5_6q4j5"]
[ext_resource type="Texture2D" uid="uid://fr1wahud7s72" path="res://assets/Buttons Pixel Animation Pack/next/72px/next02.png" id="6_qva8h"]
[ext_resource type="Texture2D" uid="uid://doc4ya3hwp3qt" path="res://assets/Buttons Pixel Animation Pack/next/72px/next03.png" id="7_w0hs8"]
[ext_resource type="Texture2D" uid="uid://da7k2nxcvofgk" path="res://assets/Buttons Pixel Animation Pack/next/72px/next04.png" id="8_2p2fb"]

[node name="RecipesBook" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(171.25, 217.75)
scale = Vector2(0.476523, 0.448428)
texture = ExtResource("1_c1yy5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 17.0
offset_top = 32.0
offset_right = 331.0
offset_bottom = 195.0
script = ExtResource("2_teeox")

[node name="RecipeTitle" type="Label" parent="VBoxContainer"]
modulate = Color(1, 0.559918, 0.869049, 1)
visibility_layer = 3
layout_mode = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="RecipeIngredients" type="Label" parent="VBoxContainer"]
modulate = Color(0, 0, 0, 1)
visibility_layer = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 27.0
offset_top = 341.0
offset_right = 332.0
offset_bottom = 421.0

[node name="PreviousButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_thi4o")
texture_pressed = ExtResource("4_33aox")
texture_hover = ExtResource("5_6q4j5")

[node name="NextButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_qva8h")
texture_pressed = ExtResource("7_w0hs8")
texture_hover = ExtResource("8_2p2fb")
